# ssf

./: .cspell.json  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: ci-docker-image.yaml  ci-image.yaml  release.yaml  test.yaml
cmm/: Cargo.toml
etc/ci/: Dockerfile
llvm/: Cargo.toml
ssc/: Cargo.toml
ssf/: Cargo.toml
ssf-cmm/: Cargo.toml
ssf-cmm/src/: closures.rs  declarations.rs  definitions.rs  entry_functions.rs  expressions.rs  foreign_declarations.rs  function_applications.rs  instruction_result.rs  instructions.rs  lib.rs  names.rs  types.rs
ssf-fmm/: Cargo.toml
ssf-fmm/src/: closure_operation_compiler.rs  closures.rs  declarations.rs  definitions.rs  entry_functions.rs  error.rs  expressions.rs  foreign_declarations.rs  foreign_definitions.rs  function_applications.rs  lib.rs  names.rs  typed_variable.rs  types.rs  utilities.rs  variable_builder.rs
ssf-llvm/: Cargo.toml
ssf-llvm/src/: closure_operation_compiler.rs  compile_configuration.rs  control_stack_compiler.rs  error.rs  expression_compiler.rs  expression_compiler_factory.rs  ffi_function_type.rs  foreign_declaration_compiler.rs  function_application_compiler.rs  function_compiler.rs  function_compiler_factory.rs  global_variable.rs  initializer_configuration.rs  initializer_sorter.rs  instruction_compiler.rs  lib.rs  malloc_compiler.rs  module_compiler.rs  thunk_compiler.rs  type_compiler.rs  utilities.rs
ssf-ssc/: Cargo.toml
ssf-ssc/src/: closure_operation_compiler.rs  closures.rs  declaration.rs  declarations.rs  definition.rs  definitions.rs  lib.rs  (+17 more)
(+133 files in other folders)
