[package]
name = "ssf-fmm"
description = "ssf to fmm compiler"
version = "0.1.0"
license = "MIT"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2018"

[dependencies]
fmm = { git = "https://github.com/raviqqe/fmm", branch = "bug/llvm" }
fmm-c = { git = "https://github.com/raviqqe/fmm", branch = "bug/llvm" }
fmm-llvm = { git = "https://github.com/raviqqe/fmm", branch = "bug/llvm" }
ssf = { path = "../ssf" }
tempfile = "3"
