[package]
name = "ssf-llvm"
description = "ssf to LLVM compiler"
version = "0.1.0"
license = "MIT"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2018"

[dependencies]
# Specify features instead of doing a branch because it's force-pushed.
inkwell = { git = "https://github.com/TheDan64/inkwell", features = ["llvm10-0"] }
lazy_static = "1"
ssf = { path = "../ssf" }
